♻️ Update : the env file add ref_token and acc_token

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 MONGODB_URI=mongodb://localhost:27017
 DB_NAME=Auth_API
+ACCESS_TOKEN_SECRET=LnYD80nOhwNqweCYpbDBjUHTdnufJ5PX
+REFRESH_TOKEN_SECRET=JZ48d8SHM1n7jWGAdrLa59S1kNil5Kb8
